--- a/style.css
+++ b/style.css
@@ -94,8 +94,7 @@ body {
 }
 h1, h2, h3 {
     letter-spacing: var(--spacing);
-/*     margin-bottom: .75rem;
- */    text-transform: capitalize;
+    text-transform: capitalize;
     line-height: 1.25;
     font-family: 'Montserrat';
     font-weight: 800;
@@ -165,15 +164,12 @@ text-decoration: underline;
     transition: var(--transition);
  }
  .show-links {
-    height: 12.5rem;
+    height: auto;
  }
  ul li {
     list-style-type: none;
  }
-  /* social icons */
- .social-icons {
-    display: none;
- }
+   
 /* Main styles */
 .hero {
     display: flex;
@@ -204,12 +200,15 @@ text-decoration: underline;
    background-color: rgb(40, 60, 80);
     color: var(--clr-white);
     font-size: 1rem;
-    padding: 0.5rem 1.2rem;
+    padding: 0.75rem 1.5rem;
     margin-top: 1rem;
     width: 80%;
+    font-weight: 600;
     border-radius: 5px;
     text-decoration: none;
     outline: none;
+    border: none;
+    cursor:  pointer;
     transition: var(--transition);
 }
   .btn:hover {
@@ -346,6 +345,83 @@ main {
     margin: 0 auto;
     max-width: 1170px;
   }
+  /* homepage style */
+
+  #homeHero {
+    position: relative;
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+background-image: url(images/childcoding.jpg);
+  }
+  
+  #homeHero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.6)
+  }
+
+#homeHero .container {
+    line-height: 1.5;
+    max-width: 600px;
+    padding: 2rem;
+    color: white;
+    position: relative;
+    z-index: 1;
+}
+
+/* #homeHero .container p {
+    padding-block : 1.3rem
+} */
+  /* homepage style */
+ 
+
+  /* services page style */
+   .loopdiv h2#looph2 {
+     padding: 0;
+    margin: 1.5rem 0;
+  }
+  .loopdiv h2 > span {
+    text-align: left;
+    color: var(--clr-green-dark);
+    overflow: hidden;
+    height: 1.25em;
+    position: relative;
+    vertical-align: bottom;
+    display: inline-block;
+    width: fit-content;
+    padding: 0;
+  }
+
+  .loopdiv h2 > span > span {
+    display: block;
+    animation: looptext 5s infinite ease-in-out;
+    animation-delay: 2s;
+   }
+
+  @keyframes looptext {
+    0% {
+        transform: translateY(0%)
+    }
+    25% {
+        transform: translateY(-100%)
+    }
+    50% {
+        transform: translateY(-200%)
+    }
+    75% {
+        transform: translateY(-300%)
+    }
+    100% {
+        transform: translateY(-400%)
+    }
+  }
+  /* services page style */
 /* media queries */
 
   
