--- a/style.css
+++ b/style.css
@@ -56,10 +56,6 @@
     --max-width: 1170px;
     --fixed-width: 620px;
   }
-
-
-
-
 /* Font face */
 @font-face {
     font-family: 'Montserrat';
@@ -98,6 +94,7 @@ h1, h2, h3 {
     line-height: 1.25;
     font-family: 'Montserrat';
     font-weight: 800;
+    text-transform: capitalize;
 }
 h1 {font-size: 1.5rem;}
  
@@ -166,7 +163,7 @@ text-decoration: underline;
  .show-links {
     height: auto;
  }
- ul li {
+ nav ul li {
     list-style-type: none;
  }
    
@@ -181,6 +178,7 @@ text-decoration: underline;
     transition: var(--transition);
     text-align: center;
 }
+
 .form:hover {
     display: block;
     box-shadow: var(--dark-shadow);
@@ -195,6 +193,7 @@ text-decoration: underline;
     color: inherit;
     text-decoration: none;
 }
+/* buttons style */
  .btn {
     display: inline-block;
    background-color: rgb(40, 60, 80);
@@ -202,7 +201,7 @@ text-decoration: underline;
     font-size: 1rem;
     padding: 0.75rem 1.5rem;
     margin-top: 1rem;
-    width: 80%;
+    width: 50%;
     font-weight: 600;
     border-radius: 5px;
     text-decoration: none;
@@ -210,6 +209,7 @@ text-decoration: underline;
     border: none;
     cursor:  pointer;
     transition: var(--transition);
+    text-transform: capitalize;
 }
   .btn:hover {
     transform: scale(1.10);
@@ -217,10 +217,21 @@ text-decoration: underline;
     background-color: var(--clr-grey-3);
     color: var(--clr-primary-10);
  }
- 
- /* SECTION REVIEWS STYLES */
+ div.btns {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+    justify-content: space-between;
+ }
+ /* GENERAL SECTION REVIEWS STYLES */
 
-
+img#aboutImg {
+    display: block;
+    height: auto;
+    max-width: 100%;
+    border-radius: 20px;
+}
  article.review {
      padding: 1.5rem 2rem;
      border-radius: var(--radius);
@@ -261,7 +272,6 @@ text-decoration: underline;
  #person-img {
     width: 150px;
     height: 150px;
-     
     border-radius: 50%;
     object-fit: cover;
     position: relative;
@@ -302,8 +312,7 @@ text-decoration: underline;
     font-size: 0.85rem;
     color: var(--clr-primary-4);
   }
-  #info 
-  .prev-btn, .next-btn {
+   .prev-btn, .next-btn {
     background: transparent;
     border-color: transparent;
     font-size: 1.26rem;
@@ -382,11 +391,11 @@ background-image: url(images/childcoding.jpg);
  
 
   /* services page style */
-   .loopdiv h2#looph2 {
+   .loopdiv h1#looph1 {
      padding: 0;
     margin: 1.5rem 0;
   }
-  .loopdiv h2 > span {
+  .loopdiv h1 > span {
     text-align: left;
     color: var(--clr-green-dark);
     overflow: hidden;
@@ -398,7 +407,7 @@ background-image: url(images/childcoding.jpg);
     padding: 0;
   }
 
-  .loopdiv h2 > span > span {
+  .loopdiv h1 > span > span {
     display: block;
     animation: looptext 5s infinite ease-in-out;
     animation-delay: 2s;
@@ -424,7 +433,11 @@ background-image: url(images/childcoding.jpg);
   /* services page style */
 /* media queries */
 
-  
+@media  screen and (max-width: 800px) {
+    .social-icons {
+         display: none;
+    }
+}
 
 @media screen and (min-width: 800px) {
     h1 {
