--- a/style.css
+++ b/style.css
@@ -88,21 +88,30 @@ body {
     background-color: var(--clr-grey-10);
     font: normal 300 .975rem / 1.5 'Lato', sans-serif;
 }
+/* heading style */
 h1, h2, h3 {
     letter-spacing: var(--spacing);
     line-height: 1.25;
     font-family: 'Montserrat';
     font-weight: 800;
     text-transform: capitalize;
+}
+h1, h2 {
     margin: 1.25rem 0;
+}
+h3, h4 {
+    margin-bottom: .55rem;
 }
 h1 {font-size: 1.5rem;}
  
+/* heading style end */
 header {
     position: fixed;
     z-index: 100;
     height: auto;
     width: 100%;
+    top: 0;
+    left: 0;
 }
  
 /* navigation style */
@@ -168,7 +177,16 @@ text-decoration: underline;
  }
    
 /* Main styles */
+main {
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+  }
+    
 .hero {
+     width: 90vw;
+    margin: 0 auto;
+    max-width: 1170px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -176,16 +194,10 @@ text-decoration: underline;
     padding: 60px 0;
     margin-bottom: 5rem;
     transition: var(--transition);
-    text-align: center;
-}
+ }
 
-.form:hover {
-    display: block;
-    box-shadow: var(--dark-shadow);
-   transform:  scale(1.05);
-}
 .container {
-    width: 90%;
+    width: 96%;
     max-width: var(--max-width);
     margin: auto;
 }
@@ -193,13 +205,14 @@ text-decoration: underline;
     color: inherit;
     text-decoration: none;
 }
-/* buttons style */
+
+/* primary buttons style */
  .btn {
     display: inline-block;
-   background-color: rgb(40, 60, 80);
+    background-color: rgb(40, 60, 80);
     color: var(--clr-white);
     font-size: 1rem;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     margin-top: 1rem;
     width: fit-content;
     font-weight: 500;
@@ -220,11 +233,12 @@ text-decoration: underline;
  div.btns {
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    column-gap: 10px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
  }
- /* GENERAL SECTION REVIEWS STYLES */
+
+ /* GENERAL SECTION & REVIEWS STYLES */
 
 img#aboutImg {
     display: block;
@@ -232,6 +246,13 @@ img#aboutImg {
     max-width: 100%;
     border-radius: 20px;
 }
+section.section-container {
+    display: grid;
+    place-items: center;
+    width: 90vw;
+    max-width: var(--fixed-width);
+    margin-bottom: 2rem;
+  }
  article.review {
      padding: 1.5rem 2rem;
      border-radius: var(--radius);
@@ -241,16 +262,18 @@ img#aboutImg {
  article.review:hover {
      box-shadow: var(--dark-shadow); 
  } 
+ article.review ul {
+    padding: 10px 8px;
+    text-align: left;
+ }
+ article.review ul li {
+    margin:.5rem 0 .55rem 0 ;
+ }
+ /* profile card style */
 #Reviews > article.review {
     text-align: center;
 }
-  section.section-container {
-    display: grid;
-    place-items: center;
-    width: 80vw;
-    max-width: var(--fixed-width);
-    margin-bottom: 1.2rem;
-  }
+  
  .title {
     text-align: center;
     margin-bottom: 3rem;
@@ -276,35 +299,8 @@ img#aboutImg {
     border-radius: 50%;
     object-fit: cover;
     position: relative;
- }/* 
- #img-container::after {
-    font-family: "Lato";
-  font-weight: 900;
-  content: "\f10e";
-  position: absolute;
-    position: absolute;
-    display: grid;
-    top: 0;
-    left: 0;
-    width: 150px;
-    height: 150px;
-    place-items: center;
-    border-radius: 50%;
-    background-color:red;
-    color: var(--clr-white);
-    transform: translateY(25%)
  }
- #img-container::before {
-    content: "";
-    width: auto;
-    height:auto;
-    background: var(--clr-primary-5);
-    position: absolute;
-    top: -0.25rem;
-    right: -0.25rem;
-    border-radius: 50%;
-  } */
-  #author {
+#author {
     margin-bottom: .25rem;
   }
   #job {
@@ -347,17 +343,7 @@ footer {
 .footer-social-icons a:hover {
     color: var(--clr-primary-7);
 }
-
-main {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-  }
-  .hero {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 1170px;
-  }
+/* PAGE SPECIFIC STYLE START */
   /* homepage style */
 
   #homeHero {
@@ -380,18 +366,36 @@ background-image: url(images/childcoding.jpg);
   }
 
 #homeHero .container {
-    line-height: 1.5;
-    max-width: 600px;
-    padding: 2rem;
+    padding:0 .35rem;
     color: white;
     position: relative;
     z-index: 1;
 }
+#homeHero .container > p.p {
+margin-bottom: 1.3rem;
+}
 
-/* #homeHero .container p {
-    padding-block : 1.3rem
-} */
-  /* homepage style */
+div.serviceCard {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+     gap: 1rem;
+    padding: 8px;
+}
+  /* homepage style end */
+  
+/* about page */
+#aboutHero {
+    display: grid;
+    padding: 10px;
+    margin-top:  5rem;
+}
+
+#aboutHero .container {
+    margin-bottom: 1rem;
+}
+/* about page */
+  /* contact style */
  iframe {
     max-width: 100%;
     height: auto;
@@ -416,7 +420,7 @@ background-image: url(images/childcoding.jpg);
     padding: 0;
   }
 
-  .loopdiv h1 > span > span {
+  .loopdiv h2 > span > span {
     display: block;
     animation: looptext 5s infinite ease-in-out;
     animation-delay: 2s;
@@ -450,13 +454,13 @@ background-image: url(images/childcoding.jpg);
 
 @media screen and (min-width: 800px) {
     h1 {
-        font-size: 2.5rem;
-      }
-      h2 {
         font-size: 2.3rem;
       }
+      h2 {
+        font-size: 2rem;
+      }
       h3 {
-        font-size: 1.75rem;
+        font-size: 1.05rem;
       }
       h4 {
         font-size: 1rem;
@@ -472,7 +476,7 @@ background-image: url(images/childcoding.jpg);
       }
        
     p {
-        font-size: 1.2rem;
+        font-size: 1.05rem;
     }
     
     div.nav-center {
@@ -495,7 +499,7 @@ background-image: url(images/childcoding.jpg);
         display: flex;
     }
     .links a {
-        font-size: 1.5rem;
+        font-size: 1.05rem;
     padding: 0;
     margin: 0 0.5rem;
     }
@@ -525,4 +529,18 @@ background-image: url(images/childcoding.jpg);
       width: 95vw;
     }
     
+  }
+  .topScrollBtn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: white;
+    background:hsl(205, 77%, 27%);
+    position: fixed;
+    z-index: 50;
+    bottom: 5rem;
+    text-align: center;
+    text-decoration: none;
+    right: 3rem;
+    padding: 15px;
   }
